--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
