--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
